created-add-edit-delete-functionality

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,12 @@
     <div class="container">
       <div class="wrapper">
         <p class="title-name">
-          To-Do List <span><i class="icon fas fa-rotate fa-fw"></i></span>
+          To-Do List <span><i class="fas fa-rotate"></i></span>
         </p>
         <hr />
         <div class="input-container">
           <input type="text" class="input-list" placeholder="Add a new to your list ..." />
+          <i class="fas fa-turn-down-left"></i>
         </div>
         <hr />
         <ul class="items" id="items">
