--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <hr />
         <div class="input-container">
           <input type="text" class="input-list" placeholder="Add a new to your list ..." />
-          <i class="fas fa-turn-down-left"></i>
+          <span><i class="fa-solid fa-arrow-turn-down fa-rotate-90 icon"></i></span>
         </div>
         <hr />
         <ul class="items" id="items">
